# archive-server

./: readme.txt
archive_server/: CMakeLists.txt  admin_panel.html  database.sql  encryption.cpp  generate_secret.py  index.html  main.cpp  script.js  secrets.hpp  setup.sh  style.css
